problema: com zoom não detectava devtools

--- a/paginas_teste/apresentacao/apresentacao.css
+++ b/paginas_teste/apresentacao/apresentacao.css
@@ -11,13 +11,13 @@ panel, in, stack, fit {
 }
 
 .encapsulate {
-    --size: 100%;
+    --size: ~;
     background-color: gray;
     padding: 5px;
 }
 
 .encapsulate-container {
-    --behavior: fit;
+    --behavior: panel;
     --size: 4252 5669;
     --align: center;
     padding: 80px;
